name:                arcade
version:             0.1
synopsis:            A physics playground
description:         A physics playground
homepage:            http://github.com/ekmett/arcade/
homepage:            http://github.com/ekmett/arcade/issues/
license:             BSD3
license-file:        LICENSE
author:              Edward Kmett, davean, Rein Henrichs
maintainer:          Edward Kmett <ekmett@gmail.com>
copyright:           (C) 2014 Edward Kmett, (C) 2014 xkcd
category:            Game
build-type:          Custom
cabal-version:       >= 1.10
extra-source-files:  .gitignore

extra-source-files:
  static/*.html
  static/*.css
  static/*.js
  static/images/*.png
  static/images/sprites/README.txt
  static/images/sprites/*.png
  static/shim/*.js
  static/fonts/*.eof
  static/fonts/*.otf
  static/fonts/*.ttf

source-repository head
  type: git
  location: http://github.com/ekmett/arcade.git

flag ekg
  default: False
  manual: True

flag server
  default: True
  manual: True

flag console
  default: True
  manual: True

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

-- You can disable hlint with -f-test-hlint
flag test-hlint
  default: True
  manual: True

flag embed
  default: False
  manual: True

library
  build-depends:
    aeson                  >= 0.7     && < 0.8,
    array                  >= 0.4     && < 0.6,
    base                   >= 4.6     && < 5,
    bytestring,
    comonad                >= 4       && < 5,
    configurator,
    containers             >= 0.5     && < 0.6,
    data-default           >= 0.5     && < 0.6,
    exceptions,
    filepath               >= 1.3     && < 1.4,
    hashable               >= 1.2     && < 1.3,
    lens                   >= 4       && < 5,
    mersenne-random-pure64 >= 0.2     && < 0.3,
    mtl                    >= 2.1.2   && < 2.2,
    network                >= 2.4.2.2 && < 2.5,
    optparse-applicative   >= 0.8     && < 0.9,
    pqueue                 >= 1.2     && < 1.3,
    process                >= 1.2     && < 1.3,
    profunctors,
    random-fu              >= 0.2     && < 0.3,
    semigroups             >= 0.12    && < 1,
    tables                 >= 0.4.1   && < 0.5,
    time                   >= 1.4     && < 1.5,
    transformers           >= 0.3     && < 0.4,
    text                   >= 1.0     && < 1.2,
    unbounded-delays       >= 0.1     && < 0.2,
    uuid                   >= 1.3     && < 1.4,
    vector                 >= 0.10    && < 0.11,
    wai-app-static,
    wai-websockets,
    warp,
    websockets,
    split                  >= 0.2     && < 0.3,
    system-filepath

  hs-source-dirs: src

  exposed-modules:
    Arcade.Connection
    Arcade.Game
    Arcade.Monitor
    Arcade.Options
    Arcade.Paths
    Arcade.Sequence
    Arcade.Server
    Arcade.Time
    Arcade.Utils

  other-modules:
    Paths_arcade

  if flag(ekg)
    build-depends: ekg
    hs-source-dirs: src-opt/ekg
  else
    hs-source-dirs: src-opt/no-ekg

  if flag(embed)
    ghc-options: -DEMBED=1
    build-depends: file-embed

  ghc-options: -Wall
  default-language: Haskell2010

-- Verify the results of the examples
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      containers,
      directory      >= 1.0,
      deepseq,
      doctest        >= 0.9.1,
      filepath

  if impl(ghc<7.6.1)
    ghc-options: -Werror

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      arcade,
      base,
      hlint >= 1.7

executable arcade
  default-language: Haskell2010
  hs-source-dirs: .
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  if !flag(server)
    buildable: False
  else
    build-depends:
      arcade,
      base,
      optparse-applicative
