name:                roguekcd
version:             0.1.0.0
synopsis:            A rogue-like of hats and stacks and style.
description:         A rogue-like of hats and stacks and style.
homepage:            http://rogue.xkcd.com/
license:             BSD3
license-file:        LICENSE
author:              davean, edwardk, ReinH, chromakode, Eldrad
maintainer:          davean@xkcd.com
copyright:           (C) 2014 xkcd
category:            Game
build-type:          Custom
cabal-version:       >= 1.10
extra-source-files:  .gitignore

source-repository head
  type: git
  location: git@git.xkrd.net:roguekcd.git

flag server
  default: True
  manual: True

flag console
  default: True
  manual: True

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

library
  build-depends:
    aeson                  >= 0.7     && < 0.8,
    base                   >= 4.6     && < 4.7,
    comonad                >= 4       && < 5,
    containers             >= 0.5     && < 0.6,
    data-default           >= 0.5     && < 0.6,
    ekg,
    fuck-threaddelay       >= 0.1     && < 0.2,
    hashable               >= 1.2     && < 1.3,
    lens                   >= 4       && < 5,
    process,
    mersenne-random-pure64 >= 0.2     && < 0.3,
    mtl                    >= 2.1.2   && < 2.2,
    optparse-applicative   >= 0.5.2.1 && < 0.6,
    pqueue                 >= 1.2     && < 1.3,
    random-fu              >= 0.2     && < 0.3,
    semigroups             >= 0.12    && < 1,
    tables                 >= 0.4     && < 0.5,
    time                   >= 1.4     && < 1.5,
    transformers           >= 0.3     && < 0.4,
    text                   >= 1.0     && < 1.2,
    uuid                   >= 1.3     && < 1.4,
    vector                 >= 0.10    && < 0.11,
    array                  >= 0.4     && < 0.5,
    split                  >= 0.2     && < 0.3

  hs-source-dirs: src
  exposed-modules:
    Rogue.Act
    Rogue.ASCII
    Rogue.Body
    Rogue.Hat
    Rogue.Location
    Rogue.Identifiers
    Rogue.Classes
    Rogue.Mob
    Rogue.Mob.Player
    Rogue.Modifier
    Rogue.Monitor
    Rogue.Stat
    Rogue.World
    Rogue.World.DemoLevels
    Rogue.Engine

  ghc-options: -Wall
  default-language: Haskell2010

-- Verify the results of the examples
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      containers,
      directory      >= 1.0,
      deepseq,
      doctest        >= 0.9.1,
      filepath,
      roguekcd

  if impl(ghc<7.6.1)
    ghc-options: -Werror

executable rogue.server
  default-language: Haskell2010
  hs-source-dirs: server
  main-is: Main.hs
  other-modules:
    Rogue.Server.Options
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(server)
    buildable: False
  else
    build-depends:
      aeson,
      base,
      bytestring,
      data-default,
      file-embed,
      fuck-threaddelay,
      lens,
      mtl,
      optparse-applicative,
      process >= 1.1 && < 1.2,
      roguekcd,
      random-fu,
      text,
      transformers,
      wai-app-static,
      wai-websockets,
      warp,
      websockets

executable rogue.client
  default-language: Haskell2010
  hs-source-dirs: client
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(console)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      data-default,
      file-embed,
      hscurses,
      lens,
      optparse-applicative,
      roguekcd,
      text,
      websockets
