name:                roguekcd
version:             0.1.0.0
synopsis:            A rogue-like of hats and stacks and style.
description:         A rogue-like of hats and stacks and style.
homepage:            http://rogue.xkcd.com/
license:             BSD3
license-file:        LICENSE
author:              davean, edwardk, ReinH, chromakode, Eldrad
maintainer:          davean@xkcd.com
copyright:           (C) 2014 xkcd
category:            Game
build-type:          Custom
cabal-version:       >= 1.10
extra-source-files:  .gitignore

source-repository head
  type: git
  location: git@git.xkrd.net:roguekcd.git

flag server
  default: True
  manual: True

flag console
  default: True
  manual: True

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

-- You can disable hlint with -f-test-hlint
flag test-hlint
  default: True
  manual: True

library
  build-depends:
    aeson                  >= 0.7     && < 0.8,
    array                  >= 0.4     && < 0.5,
    base                   >= 4.6     && < 4.7,
    bytestring,
    comonad                >= 4       && < 5,
    configurator,
    containers             >= 0.5     && < 0.6,
    data-default           >= 0.5     && < 0.6,
    ekg,
    exceptions,
    file-embed,
    hashable               >= 1.2     && < 1.3,
    hscurses,
    lens                   >= 4       && < 5,
    mersenne-random-pure64 >= 0.2     && < 0.3,
    mtl                    >= 2.1.2   && < 2.2,
    optparse-applicative   >= 0.5.2.1 && < 0.6,
    pqueue                 >= 1.2     && < 1.3,
    process                >= 1.1     && < 1.2,
    profunctors,
    random-fu              >= 0.2     && < 0.3,
    semigroups             >= 0.12    && < 1,
    tables                 >= 0.4     && < 0.5,
    time                   >= 1.4     && < 1.5,
    transformers           >= 0.3     && < 0.4,
    text                   >= 1.0     && < 1.2,
    unbounded-delays       >= 0.1     && < 0.2,
    uuid                   >= 1.3     && < 1.4,
    vector                 >= 0.10    && < 0.11,
    wai-app-static,
    wai-websockets,
    warp,
    websockets,
    split                  >= 0.2     && < 0.3

  hs-source-dirs: src

  exposed-modules:
    Rogue.Act
    Rogue.ASCII
    Rogue.Bucket
    Rogue.Classes
    Rogue.Client
    Rogue.Client.Model
    Rogue.Client.Options
    Rogue.Curses
    Rogue.Description
    Rogue.Engine
    Rogue.Events
    Rogue.Hat
    Rogue.Location
    Rogue.Mob
    Rogue.Mob.Id
    Rogue.Mob.Player
    Rogue.Modifier
    Rogue.Monitor
    Rogue.Paths
    Rogue.Server
    Rogue.Server.Options
    Rogue.Stat
    Rogue.Time
    Rogue.Utils
    Rogue.World
    Rogue.World.DemoLevels

  other-modules:
    Paths_roguekcd

  ghc-options: -Wall
  default-language: Haskell2010

-- Verify the results of the examples
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      containers,
      directory      >= 1.0,
      deepseq,
      doctest        >= 0.9.1,
      filepath

  if impl(ghc<7.6.1)
    ghc-options: -Werror

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7,
      roguekcd

executable roguish
  default-language: Haskell2010
  hs-source-dirs: .
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T

  if !flag(server)
    buildable: False
  else
    build-depends:
      base,
      optparse-applicative,
      roguekcd
